--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,7 +9,7 @@
 </p>
  
 <h2>Comments</h2>
-<%= render @article.comments %>
+<%= render @article.id %>
  
 <h2>Add a comment:</h2>
 <%= render 'comments/form' %>
